--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.1",
+    "date-fns": "^4.1.0",
+    "next": "^14.2.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
