--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "next": "^14.2.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^9",
