--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Backend API URL
 # Local Development: http://localhost:5001
-# Production (Render/Railway): https://your-app-name.onrender.com
+# Production (Render/Railway): https://calcom-backend-production.up.railway.app
 NEXT_PUBLIC_API_URL=http://localhost:5001
